# wrapper-development

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  LICENSE.md  README.md  README.rst  docker_install.sh  install_engine.sh  install_engine_requirements.sh  packageinfo.py  pyproject.toml  setup.py
.github/workflows/: CODEOWNERS
docs/: conf.py  index.md  installation.md  usage.md
examples/: __init__.py  example.py  simple_example.py
osp/wrappers/: some_database_session.py  some_simulation_session.py  some_sql_database_session.py  some_triplestore_session.py
osp/wrappers/simple_simulation/: __init__.py  simple_ontology.ontology.yml  simple_simulation_session.py  simulation_engine.py
package_name/: __init__.py  engine.py  ontology.ttl  ontology.yml  wrapper.py
some_wrapper/: some_database_session.py  some_sql_database_session.py
tests/: __init__.py  test_integration.py  test_unit.py  test_usage.py  test_wrapper_api.py
wrapper/: schema.some_wrapper.yml  some_database_session.py  some_simulation_session.py
wrappers/: abc_cuds_checker.py  abc_interoperability_layer.py  abc_semantic_layer.py
